# tarsum

./: Cargo.toml  README.md
src/: main.rs
test_data/: README.md  create-archives.sh  root.tar  root.tar.bz2  root.tar.xz
test_data/root/: a.txt  b.txt  c.txt
test_data/root/a/: d.txt  e.txt
test_data/root/a/aa/: f.txt  g.txt
test_data/root/a/bb/: h.txt
test_data/root/b/aa/: i.txt
