[package]
name = "tarsum"
version = "0.1.4"
authors = ["Chris Moore"]
edition = "2018"
description = "A command line tool to get file hashes of files within archives, without extracting files to disk first."
keywords = [ "checksum", "hash", "archive", "tar", "zip" ]
categories = [ "command-line-utilities", "filesystem" ]
license = "MIT"
repository = "https://github.com/chrismooredev/tarsum"

exclude = [ "test_data" ]

[dependencies]
clap = "3.0.0-beta.2"

bytesize = "1.0.1"
regex = "1.5.4"
checksums = "0.9.0"

tar = "0.4.35"
flate2 = "1.0.20"
xz2 = "0.1.6"
bzip2 = "0.4.3"
zip = "0.5.13"
